# turbobadger

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  build.sh  integration.txt  readme.md  readme.txt  tb_config.h.in  tinkerbell.sublime-project  turbobadger.sublime-project
.circleci/: config.yml
Demo/: Application.cpp  Application.h  CMakeLists.txt  Demo.h  Demo01.cpp  Demo02.cpp  ListWindow.cpp  ResourceEditWindow.cpp  ResourceEditWindow.h  config.h  freeglut.lib  glfw_extra.h  glfw_extra_linux.cpp  glfw_extra_win.cpp  port_glfw.cpp  port_glut.cpp  tb_renderer_gl.cpp  tb_renderer_gl.h
Demo/VisualStudio/: Demo.sln  Demo.vcxproj  Demo.vcxproj.filters  tb_static.vcxproj  tb_static.vcxproj.filters  tinkerbell_static.vcxproj  tinkerbell_static.vcxproj.filters
Demo/demo01/: Demo.h  Demo01.cpp  ListWindow.cpp  ListWindow.h  ResourceEditWindow.cpp  ResourceEditWindow.h
Demo/demo01/skin/: skin.tb.txt
Demo/demo01/ui_resources/: resource_edit_test.tb.txt  resource_edit_window.tb.txt  test_image_widget.tb.txt  test_layout01.tb.txt  test_layout02.tb.txt  test_layout03.tb.txt  test_radio_checkbox.tb.txt  test_scrollcontainer.tb.txt  test_scroller_snap.tb.txt  test_select.tb.txt  test_select_advanced.tb.txt  test_skin_conditions01.tb.txt  test_skin_conditions02.tb.txt  test_tabcontainer01.tb.txt  test_textwindow.tb.txt  test_toggle_containers.tb.txt  test_ui.tb.txt
Demo/freeglut/src/: freeglut_main.c
Demo/platform/: Application.cpp  Application.h  glfw_extra.h  glfw_extra_linux.cpp  glfw_extra_win.cpp  main.cpp  port_glfw.cpp  port_glfw.hpp  port_sdl.cpp  port_sdl2.cpp  port_sdl2.hpp
Demo/renderers/: tb_renderer_gl.cpp  tb_renderer_gl.h
Demo/skin/: image_frame.psd  skin.tb.txt
Demo/ui_resources/: property_window.tb.txt  radio_checkbox.tb.txt  resource_edit_test.tb.txt  resource_edit_window.tb.txt  test_animations.tb.txt  test_editor_my_window.tb.txt  test_image_widget.tb.txt  test_layout01.tb.txt  test_radio_checkbox.tb.txt  test_scrollcontainer.tb.txt  test_select.tb.txt  test_select_advanced.tb.txt  test_skin_conditions.tb.txt  test_tabcontainer01.tb.txt  test_textwindow.tb.txt  test_toolbar01.tb.txt  test_toolbar02.tb.txt  test_toolbar03.tb.txt  test_toolbar04.tb.txt  test_ui.tb.txt  toggle_containers.tb.txt
DemoAndroid/: AndroidManifest.xml  build.bat  build.xml  tinkerbell_android.sublime-project  turbobadger_android.sublime-project  update_assets.bat
DemoAndroid/assets/layout/: main_layout.tb.txt
DemoAndroid/jni/: Android.mk  App.cpp  App.h  Application.mk  jni_glue.cpp
DemoAndroid/res/values/: strings.xml
DemoAndroid2/: local.properties
DemoAndroid2/app/: build.gradle
DemoAndroid2/gradle/wrapper/: gradle-wrapper.properties
cmake/: iOS.cmake
doc/: Doxyfile  Doxyfile.in  ghpages.sh  header.html  mainpage.h
ide_extensions/VisualStudio/: install.bat  tinkerbell.natvis  turbobadger.natvis
resources/default_skin/: dimmer.psd  skin.tb.txt
resources/metadata/: tb_widgets_attr.tb.txt
src/tb/: CMakeLists.txt  tb_bitmap_fragment.cpp  tb_bitmap_fragment.h  tb_blur.cpp  tb_blur.h  tb_clipboard_dummy.cpp  tb_clipboard_glfw.cpp  tb_clipboard_sdl2.cpp  tb_clipboard_win.cpp  tb_color.cpp  tb_color.h  tb_config.h  tb_config.h.in  tb_core.cpp  tb_core.h  tb_debug.cpp  tb_debug.h  tb_dimension.cpp  tb_dimension.h  tb_editfield.cpp  tb_editfield.h  tb_file_android.cpp  tb_file_posix.cpp  tb_font_desc.h  tb_font_renderer.cpp  tb_font_renderer.h  tb_font_renderer_freetype.cpp  tb_font_renderer_freetypeX.cpp  tb_font_renderer_stb.cpp  tb_font_renderer_tbbf.cpp  tb_geometry.cpp  tb_geometry.h  tb_hash.cpp  tb_hash.h  tb_hashtable.cpp  tb_hashtable.h  tb_id.cpp  tb_id.h  tb_image_loader_stb.cpp  tb_inline_select.cpp  (+66 more)
src/tb/addons/tbimage/: tb_image_manager.h  tb_image_widget.cpp  tb_image_widget.h
src/tb/animation/: tb_animation.cpp  tb_animation.h  tb_widget_animation.cpp  tb_widget_animation.h
src/tb/image/: tb_image_manager.cpp  tb_image_manager.h  tb_image_widget.cpp  tb_image_widget.h
src/tb/parser/: tb_parser.cpp  tb_parser.h
src/tb/renderers/: tb_renderer_batcher.cpp  tb_renderer_batcher.h  tb_renderer_gl.cpp  tb_renderer_gl.h
src/tb/tests/: tb_test.cpp  tb_test.h  test_tb_color.cpp  test_tb_linklist.cpp  test_tb_node_ref_tree.cpp  test_tb_style_edit.cpp  test_tb_widget_value.cpp
src/tb/utf8/: utf8.cpp
stb_image/: tb_image_loader_stb.cpp
tbanimation/: Animation.cpp  Animation.h  tb_animation.cpp  tb_animation.h  tb_animation_utils.h
tdfont/: tdfont.cpp  tdfont.h  tdfont_gl.cpp
tdfont/default_font/: font_segoe_white_14.psd  symbolfontsmall.psd
tdimage/: lodepng.h  stb_image.c  tdimage.cpp  tdimage.h  tdimage_png.cpp
tinkerbell/: lng_en.tb.txt  lng_sv.tb.txt
tinkerbell/default_font/: neon.psd  neon.tb.txt  orange.tb.txt  orangutang.tb.txt  segoe_white_with_shadow.tb.txt
tinkerbell/default_skin/: TBSectionContainer.psd  arrow.psd  button.psd  button_flat.psd  checkradio.psd  container.psd  editfield.psd  gear.psd  gear_big.psd  gear_big2.psd  license.txt  mover.psd  progress_spinner.psd  progress_spinner2.psd  progress_spinner_strip.psd  progress_spinner_strip_2.psd  skin.tb.txt  slider_bg.psd  tabbutton.psd  teststuff.psd  testtabbuttons.psd  window.psd  window_active.psd  window_close.psd  window_mover.psd
tinkerbell/src/: PStyleEdit.cpp  PStyleEdit.h  tb_addon.cpp  tb_addon.h  tb_bitmap_fragment.cpp  tb_bitmap_fragment.h  tb_clipboard_dummy.cpp  tb_clipboard_glfw.cpp  tb_clipboard_win.cpp  tb_color.cpp  tb_color.h  tb_config.h  tb_core.cpp  tb_core.h  tb_debug.cpp  tb_debug.h  tb_dimension.cpp  tb_dimension.h  tb_editfield.cpp  tb_editfield.h  tb_font_desc.h  tb_font_renderer.cpp  tb_font_renderer.h  tb_font_renderer_freetype.cpp  tb_font_renderer_stb.cpp  tb_font_renderer_tbbf.cpp  tb_geometry.cpp  tb_geometry.h  tb_hash.cpp  tb_hash.h  tb_hashtable.cpp  tb_hashtable.h  tb_id.cpp  tb_id.h  tb_image_loader_stb.cpp  tb_inline_select.cpp  tb_inline_select.h  tb_language.cpp  tb_language.h  tb_layout.cpp  (+68 more)
tinkerbell/src/animation/: tb_animation.cpp  (+4 more)
visual studio addon/: tinkerbell.natvis
(+48 files in other folders)
